--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,13 @@
   --background: #ffffff;
   --foreground: #171717;
 }
-
+  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+  
+    body {
+      font-family: 'Inter', sans-serif; 
+      color: var(--foreground);
+     background: var(--background);
+    }
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -14,8 +20,3 @@
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
